# distributed_services_with_rust

./: .env  Cargo.toml  build.rs
src/: app.rs  commit_log.rs  commit_log_v2.rs  index.rs  main.rs  segment.rs  server.rs  store.rs
src/api/v1/: log.proto  mod.rs
src/routes/: mod.rs
src/routes/commit_log/: mod.rs  viewmodel.rs
