[package]
name = "proglog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "2.2.0"
log = "0.4.0"
env_logger = "0.8.4"
dotenv = "0.15.0"
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.9"
# Only necessary if using Protobuf well-known types:
# TODO: remove me if i end up not being used.
prost-types = "0.9"
memmap = "0.7.0"
tempfile = "3.2.0"

[build-dependencies]
prost-build = "0.5"