[package]
name = "proglog"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "3"
actix-rt = "2.2.0"
dotenv = "0.15.0"
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.9"
# Only necessary if using Protobuf well-known types:
# TODO: remove me if i end up not being used.
prost-types = "0.9"
memmap = "0.7.0"
tempfile = "3.2.0"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2.0"
tonic = "0.6"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"

[dev-dependencies]
test-log = { version = "0.2.8", default-features = false, features = ["trace"] }

[build-dependencies]
tonic-build = "0.6"